--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         </activity>
         <activity
             android:name=".ui.signIn.SignInScreen"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +27,7 @@
         </activity>
         <activity
             android:name=".ui.signIn.SignUpScreen"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:exported="true">
         </activity>
         <activity
