--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,21 +4,19 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlinx-serialization'
     id 'dagger.hilt.android.plugin'
-    id 'com.google.gms.google-services'
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Services plugin
 
 
 android {
-    compileSdk 31
-
+    compileSdk 30
 
     defaultConfig {
 
         applicationId "fr.miage.teambuilder"
         minSdk 23
-        targetSdk 31
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -41,21 +39,21 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinStdlibVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     // AndroidX
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 
     // AndroidX - Compose
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01'
+    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta02"
 
     // Timber
-    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation "com.jakewharton.timber:timber:4.7.1"
 
     // Dagger
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -63,13 +61,7 @@ dependencies {
     // Hilt
     implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
     implementation "androidx.hilt:hilt-work:1.0.0"
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
-    implementation 'com.google.firebase:firebase-functions-ktx:20.0.1'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Dagger - Hilt compiler
@@ -86,7 +78,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
     // Lifecycle
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$room_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
